--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -11,7 +11,6 @@
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView" />
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
