--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -8,9 +8,6 @@
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp" />
+        android:layout_margin="20dp" />
 
 </LinearLayout>
