--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,6 +6,6 @@
     <item
         android:id="@+id/info"
         android:orderInCategory="100"
-        android:title="info"/>
+        android:title="Info" />
 
 </menu>
