--- a/res/layout/infoview.xml
+++ b/res/layout/infoview.xml
@@ -14,6 +14,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Github" />
+        android:text="@string/github_link" />
 
 </LinearLayout>
