--- a/res/layout/infoview.xml
+++ b/res/layout/infoview.xml
@@ -8,7 +8,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="by @lazykuna\n공앱 이따구로 만들지 마라" />
+        android:text="by @lazykuna\n공앱 이따구로 만들지 마라\n140701 update ver." />
 
     <TextView
         android:id="@+id/textView2"
